RESOLVED FIXED31660
REGRESSION (r49394): Image load event fires before the document fragment is attached.
https://bugs.webkit.org/show_bug.cgi?id=31660
Summary REGRESSION (r49394): Image load event fires before the document fragment is a...
Dimitri Glazkov (Google)
Reported 2009-11-18 21:37:52 PST
What happens here is this: * site loads some HTML via XHR * then attempts to inject it into DOM * as the HTML is being parsed, we encounter an image element with an onload handler * image has already been loaded on the site, so we fire the onload handler immediately * onload handler attempts to document.getElementById the element in the fragment. * fragment isn't yet attached to DOM * sadness ensues. Originally reported at http://cbug.com/27148.
Attachments
test case (699 bytes, text/html)
2009-12-14 11:39 PST, Alexey Proskuryakov
no flags
proposed fix (7.45 KB, patch)
2009-12-14 13:12 PST, Alexey Proskuryakov
hyatt: review+
Alexey Proskuryakov
Comment 1 2009-11-20 14:36:28 PST
Alexey Proskuryakov
Comment 2 2009-12-14 10:36:06 PST
What steps will reproduce the problem? 1. Go to http://klout.com/profile/stats/ghosttie/ What is the expected result? A flash graph What happens instead? A message saying "Flash Player version 8 or above is required to view the chart". Flash version 10 is installed and works fine on other sites.
Alexey Proskuryakov
Comment 3 2009-12-14 11:39:00 PST
Created attachment 44808 [details] test case Test case made from the above description. I haven't looked at the actual site to verify how it fails.
Alexey Proskuryakov
Comment 4 2009-12-14 13:12:49 PST
Created attachment 44815 [details] proposed fix
Dave Hyatt
Comment 5 2009-12-14 13:43:47 PST
Comment on attachment 44815 [details] proposed fix r=me
Alexey Proskuryakov
Comment 6 2009-12-14 13:47:37 PST
Note You need to log in before you can comment on or make changes to this bug.